media query tablet e desktop

--- a/style2.css
+++ b/style2.css
@@ -1,13 +1,16 @@
 
-/* #lezioni .row {
-  max-width: 70%;
-} */
-
 /***************** media query ********************/
+
+  @media screen and (max-width: 420px) {
+
+    #lezioni .row img {
+      width: 80%;
+    }
+  }
 
   /*********** mobile **********/
 
-  @media screen and (max-width: 420px) {
+  @media screen and (max-width: 767px) {
 
     .row {
       width: 90%;
@@ -16,17 +19,13 @@
     }
 
     #lezioni .row > .left {
-      margin-bottom: 20px;
+      margin-bottom: 60px;
     }
 
     #lezioni .row > .left, #lezioni .row > .right {
       float: none;
       width: 100%;
       font-size: 22px;
-    }
-
-    #lezioni .row img {
-      width: 90%;
     }
 
     h1 {
@@ -49,5 +48,93 @@
     #steps .row > .central {
       margin-bottom: 45px;
       border-bottom: solid 1px #9A9A9A;
+    }
+  }
+
+  /****************** tablet *********************/
+
+  @media screen and (min-width: 768px) and (max-width: 1199px){
+
+    .row {
+      width: 95%;
+    }
+
+    .row::after{
+      content: "";
+      display: table;
+      clear: both;
+    }
+
+    #lezioni .row > .left, #lezioni .row > .right {
+      width: 48%;
+      font-size: 20px;
+    }
+
+    #lezioni .row > .left {
+      margin-right: 1%;
+    }
+
+    #lezioni .row > .right {
+      margin-left: 1%;
+    }
+
+    #steps .row > .left,
+    #steps .row > .central {
+      width: 47.7%;
+      margin-bottom: 35px;
+      float: none;
+      display: inline-block;
+      font-size: 20px;
+    }
+
+    #steps .row > .left {
+      margin-right: 2%;
+    }
+
+    #steps .row > .central {
+      margin-left: 2%;
+    }
+
+    #steps .row > .right {
+      float: none;
+      width: 100%;
+      font-size: 20px;
+    }
+
+    #why .row > .first,
+    #why .row > .second,
+    #why .row > .third {
+      font-size: 20px;
+    }
+  }
+
+  /*************** desktop *****************/
+  @media screen and (min-width: 1200px) {
+
+    #steps .row > .left,
+    #steps .row > .central,
+    #steps .row > .right {
+      box-sizing: border-box;
+      padding: 0 10px;
+    }
+
+    #why .row > .first,
+    #why .row > .second,
+    #why .row > .third {
+      width: 33.3333%;
+      float: left;
+      margin-top: 40px;
+      padding: 0 10px;
+      box-sizing: border-box;
+    }
+
+    .row::after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+
+    hr {
+      display: none;
     }
   }
